todolist-goof/k8s/mitigations/denyall-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-to-webapp
spec:
  podSelector:
    matchLabels:
      app: javagoof
      tier: webapp
  policyTypes:
    - Ingress
  ingress:
  - ports:
    - port: 8080
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webapp-to-db
spec:
  podSelector:
    matchLabels:
      app: javagoof
      tier: webapp
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: javagoof
              tier: db
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-from-webapp
spec:
  podSelector:
    matchLabels:
      app: javagoof
      tier: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: javagoof
              tier: webapp
